[package]
name = "timeheight"
version = "0.1.0"
authors = ["Alex Weech <aweech340@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.1", features = ["rayon"]}
reqwest = { version = "0.11", features = ["blocking"]}
clap = "2.33.1"
time = "0.2.16"
nom = "5.1.2"
thiserror = "1.0.20"
cpython = "0.5.0"
ordered-float = "1.0.2"
